tests/baselines/reference/collisionCodeGenModuleWithMethodChildren.errors.txt
collisionCodeGenModuleWithMethodChildren.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionCodeGenModuleWithMethodChildren.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionCodeGenModuleWithMethodChildren.ts(17,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionCodeGenModuleWithMethodChildren.ts(27,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== collisionCodeGenModuleWithMethodChildren.ts (4 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var x = 3;
        class c {
            fn(M, p = x) { }
        }
    }
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class d {
            fn2() {
                var M;
                var p = x;
            }
        }
    }
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class e {
            fn3() {
                function M() {
                    var p = x;
                }
            }
        }
    }
    
    module M { // Shouldnt bn _M
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class f {
            M() {
            }
        }
    }